[Changes 1.2.2]

* Remove netfinger client code (no-one is running fingerd anymore) and
  repurpose /FINGER command to send a CTCP FINGER instead. (caf)

* Enable use of cached whowas info for /IG* and /UNIG* commands. (caf)

* Add support for OpenSSL 1.1.0 to configure script. (caf)

* /UNBAN <nick> can use cached whowas info to unset bans. (caf)

* Unsetting CMDCHARS sets it back to the default. (caf)

* Fix a double-free bug when a window on an alternate screen queries an exec
  process. (caf)

* Use 127.0.0.1 for wserv socket, which fixes /WINDOW CREATE with IPv6. (caf)

* Allow INVITE and WALLOP floods to trigger auto-ignore. (caf)

* Change $indextoword() so that the return value numbers the words from 0
  rather than 1, to align with documentation and EPIC4/5. (caf)

* Correct issue where flood detection could become unreliable. (caf)

* Cast check_ext_mail and check_ext_mail_status function pointers to the
  correct type before using them. This might have caused a problem with
  the qmail plugin on 64 bit architectures. (caf)

* Fix bug in DCC privileged port detection logic. (caf)

* Don't show DCC "Handshake failed" message twice, improve the message itself
  and use the same one for privileged port / zero address. (caf)

* Use the same format in /DCC LIST for all waiting offers and tweak
  the DCC_BAR_TYPE 1 format to show DCC state. (caf)

* Correctly show time since offer for DCC CHAT offers in /DCC LIST. (caf)

* Improve completion bar for /SET DCC_BAR_TYPE 1 so that it always matches
  the completion percentage. (caf)

* Correctly align formatting of /DCC LIST line for /SET DCC_BAR_TYPE 1. (caf)

* Act on channel mode lock as half-op. (caf)

* Fix crash and memory leak in $aliasctl(COMMAND MATCH). (caf)

* Fix memory leaks in /CDCC PLIST and /CDCC NOTICE. (caf) 

* Rename reserved identifiers from irc_std.h to fix building on under
  latest cygwin. (caf)

* Ensure /BAN /DBAN /MB /MK /MUB /UNBAN commands send command to the right
  server. (caf)
